--- a/admin-page/views/common/dialogs.ejs
+++ b/admin-page/views/common/dialogs.ejs
@@ -101,15 +101,14 @@
                         <label for="address" class="control-label">Địa Chỉ:</label>
                         <input type="text" class="form-control" id="address" name="address">
                     </div>
-                    <!-- <div class="form-group">
+                    <div class="form-group">
                         <label for="role" class="control-label">Cấp Độ:</label>
                         <select id="role" name="role">
                             <option value="ADMIN" selected>Quản Trị Viên</option>
                             <option value="MANAGER">Quản Lý</option>
                             <option value="USER">Người Dùng</option>
                         </select>
-
-                    </div> -->
+                    </div>
 
                     <button type="submit"
                         onclick="handleInsertUserAccount(); $('#forminsertuser').get(0).reset();  return false;"
@@ -150,6 +149,42 @@
         </div>
     </div>
 </div>
+
+<div id="dlgupdateuserrole" class="modal fade" role="dialog">
+        <div class="modal-dialog" style="padding-top: 10%;">
+    
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Phân Quyền Tài Khoản</h4>
+                </div>
+    
+                <div class="modal-body">
+                    <form action="#" method="POST" id="formupdateuserrole">
+                        <div class="form-group">
+                            <label for="id" class="control-label">Tên Đăng Nhập:</label>
+                            <input type="text" class="form-control" id="username" name="username" readonly required>
+                        </div>
+                        <div class="form-group">
+                                <label for="role" class="control-label">Cấp Độ:</label>
+                                <select id="role" name="role">
+                                    <option value="ADMIN" selected>Quản Trị Viên</option>
+                                    <option value="MANAGER">Quản Lý</option>
+                                    <option value="USER">Người Dùng</option>
+                                </select>
+                            </div>
+                       
+                        <button type="submit" onclick="handleUpdateUserRole(); return false;" class="btn btn-info"
+                            data-dismiss="modal">OK</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                    </form>
+                </div>
+    
+            </div>
+        </div>
+    </div>
 
 <div id="dlgverifyuser" class="modal fade" role="dialog">
     <div class="modal-dialog" style="padding-top: 10%;">
