--- a/admin-page/views/user/user.ejs
+++ b/admin-page/views/user/user.ejs
@@ -20,8 +20,7 @@
               <div class="box">
                 <div class="box-header">
                   <h3 class="box-title">Danh Sách Người Dùng</h3>
-                  <a href="#" class="btn btn-sm btn-info btn-flat pull-right" data-toggle="modal"
-                    data-target="#dlginsertuser">Thêm Người Dùng Mới</a>
+                
                 </div>
 
                 <div class="box-body">
@@ -37,6 +36,7 @@
                         <th>Địa Chỉ</th>
                         <th>Số Điện Thoại</th>
                         <th>Lần Đăng Nhập Cuối</th>
+                        <th>Phân Quyền</th>
                         <th>Cập Nhật</th>
                         <th>Xóa</th>
                       </tr>
