--- a/main-page/public/stylesheets/style.css
+++ b/main-page/public/stylesheets/style.css
@@ -47,6 +47,34 @@ body {
 .no-padding {
   padding: 0;
 }
+.counter
+{
+    background-color: #eaecf0;
+    text-align: center;
+}
+.employees,.customer,.design,.order
+{
+  
+}
+.counter-count
+{
+    margin-left: 30px;
+    font-size: 18px;
+    background-color: #00b3e7;
+    border-radius: 50%;
+    position: relative;
+    color: #ffffff;
+    text-align: center;
+    line-height: 50px;
+    width: 50px;
+    height: 50px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: inline-block;
+}
+
 
 #message {
   display:none;
