--- a/main-page/views/checkout/checkout.ejs
+++ b/main-page/views/checkout/checkout.ejs
@@ -35,13 +35,15 @@
     hiddenField.type  = "hidden";
     form1.appendChild(hiddenField);
     document.body.appendChild(form1);
-    form1.submit(function(){});
+    form1.submit(function(){
+      
+    });
     
   }
   
 });
 ajax.then(function(){
-  $('#myModal').modal('show');
+  
 });
 
 
