--- a/main-page/views/product/product_detail.ejs
+++ b/main-page/views/product/product_detail.ejs
@@ -1,4 +1,45 @@
 <script type="text/javascript">
+  $('.counter-count').each(function () {
+        $(this).prop('Counter',0).animate({
+            Counter: $(this).text()
+        }, {
+            duration: 5000,
+            easing: 'swing',
+            step: function (now) {
+                $(this).text(Math.ceil(now));
+            }
+        });
+    });
+    function postComment(){
+      var type='<%- productInfo.productID %>'
+      console.log($('#name').val()+"  "+$('#comment').val())
+      if('<%= user %>'){
+        $.ajax('../products/comment',
+      {
+        type: 'POST',
+        data: {
+          productID:type,
+          email: $('#email').val(),
+          comment: $('#comment').val()
+        },
+        success: function (data, status, xhr) { // success callback function
+        }
+      });
+      }
+      else{
+        $.ajax('../products/comment',
+      {
+        type: 'POST',
+        data: {
+          productID:type,
+          customerName: $('#name').val(),
+          comment:$('#comment').val()
+        },
+        success: function (data, status, xhr) { // success callback function
+        }
+      });
+    }
+    }
   function addproduct(productID,categoryID,image, name, price,size) {
     console.log(image+name+price);
     if(size==""){
@@ -55,7 +96,9 @@
                 <div class="aa-product-view-slider">
                   <div id="demo-1" class="simpleLens-gallery-container">
                     <div class="simpleLens-container">
-                      <div class="simpleLens-big-image-container"><img src="<%=productInfo.image%>"
+                      <div class="simpleLens-big-image-container">
+                          
+                        <img src="<%=productInfo.image%>"
                           class="simpleLens-big-image"></div>
                     </div>
                   </div>
@@ -63,10 +106,18 @@
               </div>
               <div class="col-md-7 col-sm-7 col-xs-12">
                 <div class="aa-product-view-content">
+                    
                   <h3><%=productInfo.productName%></h3>
+                  
                   <div class="aa-price-block">
 
-                    <h2><span class="label label-default"><%=productInfo.discountPrice%> VNĐ</span></h2>
+                    <h2><span class="label label-default"><%=productInfo.discountPrice%> VNĐ </span><p class="counter-count"><%= productInfo.viewCount%></p>
+                        
+                    </h2>
+                    
+                        
+                    
+                    
                     <b class="aa-product-avilability">Tình trạng:
                       <%if (productInfo['quantity'] > 0) { %>
                       <span style="margin-left:5px;" class="label label-success">Có sẵn hàng</span>
@@ -125,8 +176,9 @@
               </div>
               <div class="tab-pane fade " id="review">
                 <div class="aa-product-review-area">
-                  <h4>2 đánh giá cho sản phẩm</h4>
+                  <h4><%= productInfo.comments.length %> đánh giá cho sản phẩm</h4>
                   <ul class="aa-review-nav">
+                    <% for(let i=0; i< productInfo.comments.length;i++){ %>
                     <li>
                       <div class="media">
                         <div class="media-left">
@@ -135,7 +187,7 @@
                           </a>
                         </div>
                         <div class="media-body">
-                          <h4 class="media-heading"><strong>Marla Jobs</strong> - <span>March 26, 2016</span></h4>
+                          <h4 class="media-heading"><strong><%= productInfo.comments[i].customerName %></strong> - <span><%= productInfo.comments[i].commentTime %></span></h4>
                           <div class="aa-product-rating">
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
@@ -143,30 +195,12 @@
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star-o"></span>
                           </div>
-                          <p>Hàng rất ok!!</p>
+                          <p><%= productInfo.comments[i].comment %></p>
                         </div>
                       </div>
                     </li>
-                    <li>
-                      <div class="media">
-                        <div class="media-left">
-                          <a href="#">
-                            <img class="media-object" src="../img/testimonial-img-3.jpg" alt="girl image">
-                          </a>
-                        </div>
-                        <div class="media-body">
-                          <h4 class="media-heading"><strong>Marla Jobs</strong> - <span>March 26, 2016</span></h4>
-                          <div class="aa-product-rating">
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star-o"></span>
-                          </div>
-                          <p>Hàng giống hình :)</p>
-                        </div>
-                      </div>
-                    </li>
+                    <%}%>
+                    
                   </ul>
                   <h4>Thêm đánh giá</h4>
                   <div class="aa-your-rating">
@@ -181,18 +215,22 @@
                   <form action="" class="aa-review-form">
                     <div class="form-group">
                       <label for="message">Nhận xét của bạn</label>
-                      <textarea class="form-control" rows="3" id="message"></textarea>
+                      <input type="text" class="form-control" id="comment" placeholder="">
                     </div>
-                    <div class="form-group">
+                    <% if(user){ %>
+                      <div class="form-group" >
+                          <label for="email">Email</label>
+                          <input type="email" class="form-control" id="email" value="<%= user.email%>" disabled >
+                        </div>
+                    <%} else{%>
+                    <div class="form-group" >
                       <label for="name">Tên</label>
                       <input type="text" class="form-control" id="name" placeholder="Name">
                     </div>
-                    <div class="form-group">
-                      <label for="email">Email</label>
-                      <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
-                    </div>
+                    <%}%>
+                    
 
-                    <button type="submit" class="btn btn-default aa-review-submit">Đăng</button>
+                    <input type="button" onclick="postComment()" class="btn btn-default aa-review-submit" value="Đăng"></input>
                   </form>
                 </div>
               </div>
