--- a/main-page/views/checkout/checkout.ejs
+++ b/main-page/views/checkout/checkout.ejs
@@ -323,8 +323,16 @@
                   <div class="aa-payment-method">                    
                     <label for="cashdelivery"><input type="radio" id="cashdelivery" name="optionsRadios"> Tiền Mặt </label>
                     <label for="paypal"><input type="radio" id="paypal" name="optionsRadios" checked> Paypal </label>
-                    <img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark">    
-                    <input type="submit" value="Place Order" class="aa-browse-btn">                
+                    <img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark">   
+                    <%if (typeof user == 'undefined') { %>
+                      <input type="submit" value="Place Order"  class="aa-browse-btn" disabled> 
+                      <% }
+                          else { %>
+                      <% if (user!==null) {%> <input type="submit" value="Place Order" class="aa-browse-btn" enable> <%}
+                                else {%> <input type="submit" value="Place Order" class="aa-browse-btn" disabled> <%}
+                              %>
+                      <%} %> 
+                                  
                   </div>
                 </div>
               </div>
