--- a/main-page/views/common/header.ejs
+++ b/main-page/views/common/header.ejs
@@ -57,11 +57,15 @@
               </div>
               <!-- / cart box -->
               <!-- search box -->
-              <div class="aa-search-box">
+              <div class="aa-search-box1">
+                <div class="aa-search-box row">
                 <form action="">
                   <input type="text" name="" id="" placeholder="Tìm kiếm tại đây.... ">
+                  
                   <button type="submit"><span class="fa fa-search"></span></button>
                 </form>
+                </div>
+                <a class="row" href="/products/search" style="float: right">Tìm kiếm nâng cao?</a>
               </div>
               <!-- / search box -->             
             </div>
