--- a/main-page/views/layout.ejs
+++ b/main-page/views/layout.ejs
@@ -25,15 +25,19 @@
   <link href="/stylesheets/sequence-theme.modern-slide-in.css" rel="stylesheet" media="all">
 
   <!-- Main style sheet -->
-  <link href="/stylesheets/style.css" rel="stylesheet">
+  <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
 
   <!-- Google Font -->
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href="/stylesheets/nouislider.css" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -108,7 +112,7 @@
       <div class="container">
         <div class="menu-area">
           <!-- Navbar -->
-          <div class="navbar navbar-default" role="navigation">
+          <div class="navbar navbar-default"  role="navigation">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -117,15 +121,15 @@
                 <span class="icon-bar"></span>
               </button>
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse" style="text-align: center;">
               <!-- Left nav -->
               <ul class="nav navbar-nav">
-                <li><a href="/">Trang chủ</a></li>
+                <li><a href="/" style="font-size: 20px; padding-right: 20px; padding-left: 30px;">Trang chủ</a></li>
 
                 <%if (typeof listCategory != 'undefined') { 
                  listCategory.forEach(category=>{
                 %><li>
-                  <a href="/products/type?id=<%= category['Id'] %>"><%= category['name'] %></a>
+                  <a href="/products/type?id=<%= category['Id'] %>" style="font-size: 20px; padding-right: 20px; padding-left: 30px;"><%= category['name'] %></a>
                 </li><%})}%>
 
               </ul>
@@ -251,6 +255,7 @@
     <script type="text/javascript" src="/js/nouislider.js"></script>
     <!-- Custom js -->
     <script src="/js/custom.js"></script>
+    <script src="/js/nouislider.js"></script>
 
 </body>
 
