--- a/main-page/views/product/product_detail.ejs
+++ b/main-page/views/product/product_detail.ejs
@@ -10,6 +10,53 @@
             }
         });
     });
+    function clickPagination(page){
+      const items = document.querySelectorAll("#listComment li");
+      for (var j = 0; j < items.length; j++) {
+        items[j].parentNode.removeChild(items[j]);
+      }
+      var info= new Array();
+      info = JSON.parse('<%- JSON.stringify(productInfo)%>');
+      console.log(info.comments);
+      
+      for (let i = (page - 1) * 1; i < (page - 1) * 1 + 1; i++) {
+        if (info.comments.length == i) break;
+        
+        let name =info.comments[i].customerName;
+        let comment=info.comments[i].comment;
+        let date=info.comments[i].commentTime;
+        console.log(name);
+        
+var myvar = '<li>'+
+'                      <div class="media">'+
+'                        <div class="media-left">'+
+'                          <a href="#">'+
+'                            <img class="media-object" src="../img/testimonial-img-3.jpg" alt="girl image">'+
+'                          </a>'+
+'                        </div>'+
+'                        <div class="media-body">'+
+'                          <h4 class="media-heading"><strong>'+name+`</strong> - <span>`+date+`</span></h4>`+
+'                          <div class="aa-product-rating">'+
+'                            <span class="fa fa-star"></span>'+
+'                            <span class="fa fa-star"></span>'+
+'                            <span class="fa fa-star"></span>'+
+'                            <span class="fa fa-star"></span>'+
+'                            <span class="fa fa-star-o"></span>'+
+'                          </div>'+
+'                          <p>'+comment+'</p>'+
+'                        </div>'+
+'                      </div>'+
+'                    </li>';
+
+$("#listComment").append(myvar);
+	
+
+
+	
+
+
+      }
+    }
     function postComment(){
       var type='<%- productInfo.productID %>'
       console.log($('#name').val()+"  "+$('#comment').val())
@@ -177,8 +224,8 @@
               <div class="tab-pane fade " id="review">
                 <div class="aa-product-review-area">
                   <h4><%= productInfo.comments.length %> đánh giá cho sản phẩm</h4>
-                  <ul class="aa-review-nav">
-                    <% for(let i=0; i< productInfo.comments.length;i++){ %>
+                  <ul class="aa-review-nav" id="listComment">
+                    <% for(let i=0; i< 1;i++){ %>
                     <li>
                       <div class="media">
                         <div class="media-left">
@@ -201,7 +248,17 @@
                     </li>
                     <%}%>
                     
+                    
                   </ul>
+                  <div class="aa-product-catg-pagination">
+                      <nav>
+                        <ul class="pagination">
+                          <% for(var i=0; i<productInfo.comments.length; i++) { %>
+                          <li><a href="#" onclick="clickPagination(`<%=i+1 %>`)"> <%=i+1 %></a></li>
+                          <% } %>
+                        </ul>
+                      </nav>
+                    </div>
                   <h4>Thêm đánh giá</h4>
                   <div class="aa-your-rating">
                     <p>Đánh giá của bạn</p>
