fix pagination comment

--- a/main-page/views/product/product.ejs
+++ b/main-page/views/product/product.ejs
@@ -43,6 +43,8 @@ function comparePriceDecrease( a, b ) {
   return 0;
   
 }
+
+//Filter
 function filter( manufacturer){
   const flagFilter=document.getElementById("Filter").options[document.getElementById("Filter").selectedIndex].text;
   const form = document.createElement('form');
