page relate orders

--- a/main-page/views/layout.ejs
+++ b/main-page/views/layout.ejs
@@ -83,13 +83,14 @@
                   <!--<li><a href="/user/detailUser?id=1">Tài khoản của tôi</a></li>
                     <li><a href="/order/list">Đơn hàng của tôi</a></li>-->
                   <li class="hidden-xs"><a href="/my-cart">Giỏ hàng</a></li>
-                  <!-- <li class="hidden-xs"><a href="/check-out">Thanh toán</a></li> -->
                   <%if (typeof user == 'undefined') { %>
                   <li><a href="" data-toggle="modal" data-target="#login-modal">Đăng nhập</a></li>
                   <% }
                       else { %>
-                  <% if (user!==null) {%><li><a href="/user/detailUser">Hi, <%=user.displayName%></a></li><%}
-                            else {%> <li><a href="" data-toggle="modal" data-target="#login-modal">Đăng nhập</a></li><%}
+                  <% if (user!==null) {%><li><a href="/order/list">Đơn hàng của tôi</a></li>
+                  <li><a href="/user/detailUser">Hi, <%=user.displayName%></a></li><%}
+                            else {%> 
+                              <li><a href="" data-toggle="modal" data-target="#login-modal">Đăng nhập</a></li><%}
                           %>
                   <%} %>
 
